css/style.scss
@import 'typography';
@import 'color';
@import 'page';
@import 'grid';
@import 'work';
@import 'newsroom';
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --theme-color: #A8BE93;
}

body {
    padding: calc(1vw + 12px);
    background-color: #fff;
    img,
    video,
    svg,
    iframe {
        filter: saturate(0);
        mix-blend-mode: multiply;
    }
    &::after {
        content: '';
        z-index: 99;
        pointer-events: none;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        position: fixed;
        backdrop-filter: saturate(0%);
        mix-blend-mode: multiply;
        background-color: var(--theme-color);
    }
}

::selection {
    color: #fff;
    background-color: var(--text-color);
}

.layout {
    &__header {
        row-gap: 30px;
        * {
            text-transform: uppercase;
        }
        &-brand {}
        &-menu {
            width: 100%;
            &-list {
                margin-left: auto;
                @media screen and (max-width: 800px) {
                    margin-left: 0;
                }
                display: grid;
                row-gap: 15px;
                grid-template-columns: repeat(4,
                1fr);
                width: 100%;
                max-width: 500px;
            }
        }
        .line {
            margin-bottom: 30px;
        }
    }
    &__footer {
        row-gap: 35px;
        * {
            text-transform: uppercase;
        }
        &-copyright {
            padding-top: 75px;
        }
        &-connection {
            display: grid;
            row-gap: 15px;
            column-gap: 15px;
            grid-template-columns: repeat(3, 1fr);
            width: 100%;
            &-item {}
        }
        &-brand {}
        &-menu {
            width: 100%;
            &-list {
                margin-left: auto;
                @media screen and (max-width: 800px) {
                    margin-left: 0;
                }
                display: grid;
                row-gap: 15px;
                grid-template-columns: repeat(4,
                1fr);
                width: 100%;
                max-width: 500px;
            }
        }
        .line {
            margin-top: 30px;
        }
    }
}

.line {
    border-bottom: 1.5px solid var(--text-color);
}

.vline {
    &,
    &-left {
        border-left: 1.5px solid var(--text-color);
    }
    &-right {
        border-right: 1.5px solid var(--text-color);
    }
}

.cover {
    height: 500px;
    width: 100%;
    transition: 1s;
    * {
        object-fit: cover;
        object-position: center;
        width: 100%;
        height: 100%;
    }
}

.textbox {
    &-left {
        text-align: left;
        width: 100%;
        text-transform: uppercase;
        // grid-column: 1/7;
    }
    &-center {
        text-align: center;
        width: 100%;
        text-transform: uppercase;
        // grid-column: 7/15;
    }
    &-right {
        text-align: right;
        width: 100%;
        text-transform: uppercase;
        // grid-column: 15/21;
    }
}

.back {
    .headar {
        margin-top: 10px;
    }
}

.category {
    &-list {
        margin-top: 10px;
        a {
            margin-right: 20px;
            text-transform: uppercase;
        }
    }
}

